# ChangeLog for sys-devel/flex
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-devel/flex/ChangeLog,v 1.113 2014/02/13 08:19:23 radhermit Exp $

*flex-2.5.38 (13 Feb 2014)

  13 Feb 2014; Tim Harder <radhermit@gentoo.org> +flex-2.5.38.ebuild:
  Version bump.

  18 Jan 2014; Mike Frysinger <vapier@gentoo.org> flex-2.5.37.ebuild:
  Add arm64 love.

  27 Apr 2013; Mike Frysinger <vapier@gentoo.org> flex-2.5.37.ebuild:
  Respect $AR setting #444086 by Denis M..

  19 Feb 2013; Zac Medico <zmedico@gentoo.org> flex-2.5.37.ebuild:
  Fix for prefix and add ~arm-linux + ~x86-linux keywords.

  01 Jan 2013; Raúl Porcel <armin76@gentoo.org> flex-2.5.37.ebuild:
  m68k/s390/sh stable wrt #447964

  01 Jan 2013; Agostino Sarubbo <ago@gentoo.org> flex-2.5.37.ebuild:
  Stable for arm, wrt bug #447964

  30 Dec 2012; Agostino Sarubbo <ago@gentoo.org> flex-2.5.37.ebuild:
  Stable for alpha, wrt bug #447964

  30 Dec 2012; Agostino Sarubbo <ago@gentoo.org> flex-2.5.37.ebuild:
  Stable for sparc, wrt bug #447964

  29 Dec 2012; Jeroen Roovers <jer@gentoo.org> flex-2.5.37.ebuild:
  Stable for HPPA (bug #447964).

  25 Dec 2012; Agostino Sarubbo <ago@gentoo.org> flex-2.5.37.ebuild:
  Stable for ia64, wrt bug #447964

  23 Dec 2012; Jeff Horelick <jdhore@gentoo.org> flex-2.5.37.ebuild:
  marked x86 per bug 447964

  23 Dec 2012; Agostino Sarubbo <ago@gentoo.org> flex-2.5.37.ebuild:
  Stable for ppc64, wrt bug #447964

  22 Dec 2012; Agostino Sarubbo <ago@gentoo.org> flex-2.5.37.ebuild:
  Stable for ppc, wrt bug #447964

  22 Dec 2012; Agostino Sarubbo <ago@gentoo.org> flex-2.5.37.ebuild:
  Stable for amd64, wrt bug #447964

  11 Aug 2012; Mike Frysinger <vapier@gentoo.org>
  +files/flex-2.5.37-tests.patch, flex-2.5.37.ebuild:
  Add fix from upstream for running tests w/bison-2.6 #429954 by Ryan Hill.

*flex-2.5.37 (04 Aug 2012)

  04 Aug 2012; Mike Frysinger <vapier@gentoo.org>