@@ -1,5 +1,5 @@
-DEFINED_PHASES=configure install prepare
-DEPEND=sys-devel/m4 nls? ( sys-devel/gettext ) test? ( sys-devel/bison )
+DEFINED_PHASES=configure install
+DEPEND=sys-devel/m4 app-arch/xz-utils nls? ( sys-devel/gettext ) test? ( sys-devel/bison )
 DESCRIPTION=The Fast Lexical Analyzer
 EAPI=4
 HOMEPAGE=http://flex.sourceforge.net/
@@ -8,6 +8,6 @@ KEYWORDS=~alpha ~amd64 ~arm ~arm64 ~hppa ~ia64 ~m68k ~mips ~ppc ~ppc64 ~s390 ~sh
 LICENSE=FLEX
 RDEPEND=sys-devel/m4
 SLOT=0
-SRC_URI=mirror://sourceforge/flex/flex-2.5.38.tar.bz2
+SRC_URI=mirror://sourceforge/flex/flex-2.5.38.tar.xz
 _eclasses_=eutils	af81d52c25ec93fbdff71e0efb0de7b7	flag-o-matic	9a539029fe1d390c1828ff633baf26b5	multilib	fac675dcccf94392371a6abee62d909f	toolchain-funcs	48b38a216afb92db6314d6c3187abea3
-_md5_=35e7e2f36305f7a2211cf139d3be0a3a
+_md5_=7b5f9e497719a8658085441c72d7e985
