@@ -9,22 +9,28 @@ AUX flex-2.5.37-proto.patch 833 SHA256 97439c94caccf96d8cc03bd0ba0b5f522ec18ee10
 AUX flex-2.5.37-tests.patch 3082 SHA256 49d432571082dab89c73f49cdc88945635d487339ca23502bc66abdcd975429a SHA512 741ba4a76bc4247b6cc9969854165944e2b404ab383229adf769b854606499078687e98a311e458e6619741feaaccdd5fd5ac25e405679f57e63b104482eed50 WHIRLPOOL fde13e5c76fd9670e95b0132d3aed452ee97b4ca746b973b256bc8d716a87dda43b10a8f49cc5c2208d7c5db47eed11e34c956695adf5d2a52983fcbf266bb3e
 DIST flex-2.5.35.tar.bz2 1256501 SHA256 0becbd4b2b36b99c67f8c22ab98f7f80c9860aec70f0350a0018f29a88704e7b SHA512 aa5aebbc7ccaa4697d7f0cfa3ba899dd3b327bc8551ba341c26bece7f9044951d0532e3ebf6ec63760204b4ff805f9f957d064e9a213ef8aac428e565de31343 WHIRLPOOL 5cb46a2cec84b1c6d25e22a1e4a6ac1a5100fcf32a488918f8bfe9236339ff2aac7f2dc35a590417fe1609d89511ab47de4ba4f7db17251b7408ea0f18e6894d
 DIST flex-2.5.37.tar.bz2 1303313 SHA256 17aa7b4ebf19a13bc2dff4115b416365c95f090061539a932a68092349ac052a SHA512 1f34285953a7f058e6a2dddc305fc82cfcaaa451d6d7777da17bf9cccbe4a08e480c8c28951fa5d2920e7c7adc40ccd0e51191b363c9a3c4137db5ded1cbbc2a WHIRLPOOL ee5a4dde9b373c57248df261a53ea951e12ccb3e6f2e6344c56c2d8393511389560b4843660edf2a0929e2ed6fc46ab8d832e36a8ee5fe4317ce85ccea14d6ca
-DIST flex-2.5.38.tar.bz2 1628060 SHA256 d42a67ce11b649ce977c8e239d04b2ef1bdbffebb8a79f4f65211ad295f274ec SHA512 1a100e8259293a020504fa9b959b440f7dcb81e3fc01bb1e844e0f26830ba872bc206e4e2c67bc264c4b74f2fe06062ed20cee6666a05aa641ff585419b98fee WHIRLPOOL 9a074c1f50058cc5b506d0c453f0d83e4a008df8c4e388bf50a4d8f85dcba7e82d108258ec2154613e25cd55a4366759dcd25d4150e3a15a50221fb2c13532ad
+DIST flex-2.5.38.tar.xz 1349536 SHA256 3621e0217f6c2088411e5b6fd9f2d83f2fbf014dcdf24e80680f66e6dd93729c SHA512 98d4a722dcb23c0ebca997ef28ae40cebbe65e24adf8700ac9127404d1bcd0e30638d296d639afb092b65b4767f35f5ee0b0bf229ac040ef8029a04694d6d4c2 WHIRLPOOL 56e282bc56ef825a953d1211602de1a243164d09b9b794debffbd7c56830572d24910b20b44b8749173c9bc008bae99406320a5042a4054290b69320a1df3aed
 DIST flex_2.5.35-10.diff.gz 41011 SHA256 1d57a2a73ae7b7d4bd95a7c3f5801ab39c0b2b55b5d838782da8d3801cc1a3b9 SHA512 ecb64cb5d27da0c82c99958640ee5f09afff4096a93817f68f3333f86a838ab4f21daf959bfc650b89e0d52a827c55265cb4c4a4f9efab050a8f91dd82258820 WHIRLPOOL 4fa27c32d81c766e657645816e4a24e46b126e5eb38ad38fc66a7d3d3e3100b76ec694898dcbcc486687f4ec9d89d517a670f7ca20de22586d2f0b56a7fe50cd
 EBUILD flex-2.5.35.ebuild 1296 SHA256 15883b37613fcdd1dd86b7bb7968a371f94345e0e1c94c59ad099191cd75a1b0 SHA512 b2f872b98039cdd7d0d95381e023ef76b41b290f763d30e9babb39d3373ea242912055b7ea1eccf46311512c7bd1e5ab1d39b3f881c0ceb90a936ca4eb9c2f0c WHIRLPOOL b168525aed3efa15c4e93fb8d80bfa8af9ea875fd4a484efa3a9f3d404f5468ecc2eb663f0e6dc73723da25bd9a0e868df2dd2da586da987d4cbc68298d40c27
 EBUILD flex-2.5.35_p10.ebuild 1331 SHA256 1746432f631397c5819a6940df6519d690722609c113f49c44a8fc8f687e7061 SHA512 cdfc0c7aa5be6cf40d993a15c24b1b253d7335a9ef535befbc9f42384e9f0f34291ba41930009c13d7937b7adef768211072a41f178ddaba160faf5b3ba6e183 WHIRLPOOL d75ef1540a221a8b24e15bd8b99005a00e74fae3ee9f9ece67d475db52dc881fbb84fd62bedf1a722a82887d96f31cd5daf69827588e34a19fa5cdbaf817d27c
 EBUILD flex-2.5.37.ebuild 1473 SHA256 a1c20f9c4b87a921e3d0bbbf0dcfd339a908d3c33ebcbbcbb1cd235adbf65ed3 SHA512 dfffac5047e188e6f11b4bf572ceb6dcbf0ea816d932abbb29b3f2de84f089626644fb35bc260bd689a98fa633ffdd91dd7ec9e5920ced7c63e7c29127ecd5e9 WHIRLPOOL 4392d3b1ea56313422b4db367853a33ba963daa80bc9e1bfcb66d5523497ed15c46a82aa7062f2c63837d74563dfe34bafaf9162f6765a878a0868d980907502
-EBUILD flex-2.5.38.ebuild 1375 SHA256 eb8131a0ee1ae1c34219d861faff0705b5cb01ec4bc4a315c07aad92ae82883a SHA512 2dfa60bb7af2001c90a0cff55135cec9d5bad6e7195a3b2eb7ea84f1659381c799a90d27c66063704319f9565a6cd20e5534c47d52081997038dd0792163f664 WHIRLPOOL 0e9062f0d347f4c3b0b9233aadc877552549a29ba8059e3114b33d4a892e3dd821fd03b8b6dce9a71f9a9df19f54bfaa24c91ce6cd6d6558e5c488d0e2a1e81e
-MISC ChangeLog 12488 SHA256 f5eb3b24868dcd4aea6c9e78c75b7b1dd3a26c3a6f4bd49d68226236291f621f SHA512 7c50c82530bfed4724d542653605d32dad5fdb191ccc99ea49b8fee59f16d4bb3570c3de2724246efff449736f16a29bd43f285a0fc44a2d8e09c28951b2a2ed WHIRLPOOL 776e03bed780711284b3f4cb5b33ff96e19ba6ba6e997b0eca78ea2caa875de7a7bfcab515c1a50b5feafff9371d9110b33dc32c4e32ae40821f9fa0d5195386
+EBUILD flex-2.5.38-r1.ebuild 1101 SHA256 cbd13cb245ca672a4a2cf774a501373d1d113c18307256b8ec7384aa162963e0 SHA512 a2e49f2245e2c89c9e44fcec1466aef7f4fa035d5b7691886e19ad48251f9e615291a901c5baa80d1651136c67108707e50591385b906dd659f48c2a811b9199 WHIRLPOOL 506693acac41675cb6108b0de8b94d3c5831e4f0e33efd7e9af7948d39fc6c8033ef4d54e44e3db640cfacacde8ac47e657c91ddd1a53d1d4f05f72a6a802147
+MISC ChangeLog 12693 SHA256 7837874471f0cd29a4bfc0d54a663a5b0273c986449624069a1d8f94a2b56f7a SHA512 edefe6f57314b094bf89afff16c664f96bf74f6766c5a6e11ab220072928f85bf3ef793985ecd56004a27d9735c50e0f2267ef59a1225d19f30830c517439929 WHIRLPOOL 503fe4dcadacb226980a3e07e1e3fbf3ce7996066359fcacf6ae4d873f101149d6c03a380381e712a3eb9af427794cf94b2db8b40584b7ad6d58f3855205e0df
 MISC metadata.xml 164 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92 SHA512 8eb0d5153d388f6ea069c64b93882244816a0a09aecc0d73cb872121ce0eb24c5ccafa96aad0b620b2300f319e1af101fa7fa6c5d0d561719d49bb07da0a2eca WHIRLPOOL 11a1441bddb7a6c69653c663902b7da5767ae6ad515ac2aabfc42fe37927a1ccc21472deeee454009ff720201a41c3e4a912df42661a0a87150fb46126da2d52
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQEcBAEBCAAGBQJS/IAPAAoJEEqz6FtPBkyjmocH/RL341m1Ut/BFL/CRi3/gv1B
-9urSlPXKhXEoxLCv1mzh31iO4z2HHN6jLO7vTrhCFQSPoUYh77yn97+SRNhaizXu
-8uPO/OgTZAgYF/ntfUCW3JPblAlCibyq5Fx1aY+yMkrM8TD+KBiw10i6e7/BY5Fj
-0M5nKHAH2HfcRtOXUJm1RHr3zY9E3nTBGfdkdJW6v99L8xvNvfyMmHF7FK/ozkEN
-nhKNdYhwENPO5lCi3Z0mRsXBcXlb6nJCyLK1gO8TkNt1HKXr9fGWh9TOVyU1hVtz
-b803h2UYEg/4jRyerktnN80X/2L4ypKDrVlIWqMQX3+GByuHtoTjlVJ54kk6keA=
-=hLFC
+iQIcBAEBCAAGBQJTJTFsAAoJEPGu1DbS6WIAvoYP/jXy9TgsyNrVA2tzSFTgZ7SP
+j8HFnT5EMuvaWFzdzlk0aLg0MyVbHfWn5clhIIFxiHedRVjp0FCyufO7KH0rdB1N
+INJc+xtla+/wlqxVklF4ZScNVYuvAqgGJZQVDDkmgYrwWRVvXNX3bbtbh2l/zdy6
+hiPY9CHl6k3m4ojXsXGhLA60xmuCOyOmqWX0UiycLHDvA69Sk+wa23oNf3JljVCJ
+oGw6ipvAlCwOVasqIa/9h23d/Xwjzjw5JL67yOVV58HyPhoSWWEVw4TXlbRxxAiV
+L0LqiRg7CXniQl5af0OmqfRPvY+GK7cxOQzWq8y0VV1/yvardYB9acKi+J+JmRyW
+ONZ8HfwRvuPXRTclLegUNfqHiJnwUlVpYgV9wTXI/rgd5M1wpAN7nq3W7riZvakX
+lxJztBs59jAmqXHNbxqxZ6sZe6Ev5+uejmiYtq1wgwjOXtuGecB0zZmenjsceIZO
+8UDUfG6CPo/vBAet5w6G+2Nydjh4CRQFq82snh0sPMkPdM4exkRDBgs9zsUeKqr8
+SvHh3Tx46finrJKCntMVjBBnjEcQBmHbTi1fWAlG6nQEfawUxDoyv+JAwZF/+TRA
+UH9oSWMX0KvRE7TRIwPyYuVhyoi3vd4wzHhfMIo0P/Q2ImDEBI1l0Z0v5B9zh6AG
+lXSe8JQERgyqQ31dc7NN
+=/3zr
 -----END PGP SIGNATURE-----
