@@ -1,20 +1,14 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-devel/flex/flex-2.5.38.ebuild,v 1.1 2014/02/13 08:19:23 radhermit Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-devel/flex/flex-2.5.38-r1.ebuild,v 1.1 2014/03/16 05:06:44 vapier Exp $
 
 EAPI="4"
 
-inherit eutils flag-o-matic toolchain-funcs
-
-if [[ ${PV} == *_p* ]] ; then
-	DEB_DIFF=${PN}_${PV/_p/-}
-fi
-MY_P=${P%_p*}
+inherit flag-o-matic
 
 DESCRIPTION="The Fast Lexical Analyzer"
 HOMEPAGE="http://flex.sourceforge.net/"
-SRC_URI="mirror://sourceforge/flex/${MY_P}.tar.bz2
-	${DEB_DIFF:+mirror://debian/pool/main/f/flex/${DEB_DIFF}.diff.gz}"
+SRC_URI="mirror://sourceforge/flex/${P}.tar.xz"
 
 LICENSE="FLEX"
 SLOT="0"
@@ -24,27 +18,23 @@ IUSE="nls static test"
 # We want bison explicitly and not yacc in general #381273
 RDEPEND="sys-devel/m4"
 DEPEND="${RDEPEND}
+	app-arch/xz-utils
 	nls? ( sys-devel/gettext )
 	test? ( sys-devel/bison )"
 
-S=${WORKDIR}/${MY_P}
-
-DOCS="AUTHORS ChangeLog NEWS ONEWS README* THANKS TODO"
-
-src_prepare() {
-	[[ -n ${DEB_DIFF} ]] && epatch "${WORKDIR}"/${DEB_DIFF}.diff
-	sed -i "/^AR =/s:=.*:= $(tc-getAR):" Makefile.in || die #444086
-}
-
 src_configure() {
 	use static && append-ldflags -static
+	# Do not install shared libs #503522
 	econf \
+		--disable-shared \
 		$(use_enable nls) \
-		--docdir="${EPREFIX}"/usr/share/doc/${PF}
+		--docdir='$(datarootdir)/doc/'${PF}
 }
 
 src_install() {
 	default
+	dodoc ONEWS
+	find "${ED}" -name '*.la' -delete
 	rm "${ED}"/usr/share/doc/${PF}/{COPYING,flex.pdf} || die
 	dosym flex /usr/bin/lex
 }
